Fix padding on iOS messages with no header

--- a/css/ios.css
+++ b/css/ios.css
@@ -127,6 +127,7 @@
   display: table;
   padding-left: .5em;
   padding-right: .5em;
+  padding-top: .5em;
   width: 284px;
 }
 
